
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fdt_off_dt_strings (void*) ;
 int fdt_set_size_dt_strings (void*,int) ;
 int fdt_size_dt_strings (void*) ;
 int fdt_splice_ (void*,void*,int ,int) ;

__attribute__((used)) static int fdt_splice_string_(void *fdt, int newlen)
{
 void *p = (char *)fdt
  + fdt_off_dt_strings(fdt) + fdt_size_dt_strings(fdt);
 int err;

 if ((err = fdt_splice_(fdt, p, 0, newlen)))
  return err;

 fdt_set_size_dt_strings(fdt, fdt_size_dt_strings(fdt) + newlen);
 return 0;
}
